<?xml version="1.0" encoding="utf-8"?>
<resources>
    <public name="cloud_payments_sdk" type="string">CloudPaymentsSDK</public>
    <string name="cpsdk_text_options_title">Выберите способ оплаты</string>
    <string name="cpsdk_text_options_card">Банковская карта</string>
    <string name="cpsdk_text_options_save_card">Сохранить карту</string>
    <string name="cpsdk_text_options_save_card_popup_1">Нажимая на чек-бокс, вы соглашаетесь с тем, что данные вашей карты сохранятся. Это означает, что при повторной оплате вам не надо будет вводить платежные реквизиты заново.</string>
    <string name="cpsdk_text_options_save_card_popup_2">При этом мы не сможем проводить никакие операции по вашей карте без вашего согласия.</string>
    <string name="cpsdk_text_options_email_checkbox">Отправить квитанцию на E-mail</string>
    <string name="cpsdk_text_options_email_title">E-mail</string>
    <string name="cpsdk_text_options_email_error">Некорректный e-mail</string>
    <string name="cpsdk_text_options_email_require">Для оплаты введите E-mail</string>
    <string name="cpsdk_text_options_card_be_saved">При оплате данные вашей карты сохранятся</string>

    <string name="cpsdk_text_card_title">Оплата картой</string>
    <string name="cpsdk_text_card_hint_number">Номер карты</string>
    <string name="cpsdk_text_card_hint_exp">ММ / ГГ</string>
    <string name="cpsdk_text_card_hint_cvv">CVV</string>
    <string name="cpsdk_text_card_pay_button">Оплатить %s</string>

    <string name="cpsdk_text_process_title">Оплата в процессе</string>
    <string name="cpsdk_text_process_title_success">Оплата прошла успешно</string>
    <string name="cpsdk_text_process_button_success">Отлично!</string>
    <string name="cpsdk_text_process_title_error">Операция отклонена</string>
    <string name="cpsdk_text_process_button_error">Повторить попытку</string>

    <string name="cpsdk_text_process_title_tinkoff_pay">Ждем ответа\noт Тинькофф Pay</string>
    <string name="cpsdk_text_process_description_tinkoff_pay">Если перейти и оплатить в приложении не удалось, попробуйте снова или выберите другой способ оплаты</string>
    <string name="cpsdk_text_process_button_tinkoff_pay">Выбрать способ оплаты</string>


    <string name="cpsdk_currency_template">%.2f\u20BD</string>

    <!-- ERRORS -->
    <string name="cpsdk_error_3001">Неверный номер заказа</string>
    <string name="cpsdk_error_3002">Некорректный идентификатор плательщика</string>
    <string name="cpsdk_error_3003">Неверная сумма</string>
    <string name="cpsdk_error_3004">Платеж просрочен</string>
    <string name="cpsdk_error_3005">Платеж не может быть принят</string>
    <string name="cpsdk_error_3006">Сервис недоступен</string>
    <string name="cpsdk_error_3007">Ошибка соединения</string>
    <string name="cpsdk_error_3008">Платеж не может быть принят</string>
    <string name="cpsdk_error_5001">Отказ эмитента проводить онлайн операцию</string>
    <string name="cpsdk_error_5005">Операция отклонена эмитентом</string>
    <string name="cpsdk_error_5006">Отказ сети проводить операцию или неправильный CVV код</string>
    <string name="cpsdk_error_5012">Карта не предназначена для онлайн платежей</string>
    <string name="cpsdk_error_5013">Слишком маленькая или слишком большая сумма операции</string>
    <string name="cpsdk_error_5030">Ошибка на стороне эквайера</string>
    <string name="cpsdk_error_5031">Неизвестный эмитент карты</string>
    <string name="cpsdk_error_5034">Отказ эмитента</string>
    <string name="cpsdk_error_5041">Карта потеряна</string>
    <string name="cpsdk_error_5043">Карта украдена</string>
    <string name="cpsdk_error_5051">Недостаточно средств на карте</string>
    <string name="cpsdk_error_5054">Карта просрочена или неверно указан срок действия</string>
    <string name="cpsdk_error_5057">Ограничение на карте</string>
    <string name="cpsdk_error_5065">Превышен лимит операций по карте</string>
    <string name="cpsdk_error_5082">Неверный CVV код</string>
    <string name="cpsdk_error_5091">Эмитент недоступен</string>
    <string name="cpsdk_error_5092">Эмитент недоступен</string>
    <string name="cpsdk_error_5096">Ошибка банка-эквайера или сети</string>
    <string name="cpsdk_error_5204">Операция не может быть обработана</string>
    <string name="cpsdk_error_5206">3-D Secure авторизация не пройдена</string>
    <string name="cpsdk_error_5207">3-D Secure авторизация недоступна</string>
    <string name="cpsdk_error_5300">Лимиты эквайера на проведение операций</string>
    <string name="cpsdk_error_3001_extra">Платеж будет отклонен</string>
    <string name="cpsdk_error_3002_extra">Платеж будет отклонен</string>
    <string name="cpsdk_error_3003_extra">Обратитесь в поддержку сайта</string>
    <string name="cpsdk_error_3004_extra">Обратитесь в поддержку сайта</string>
    <string name="cpsdk_error_3005_extra">Платеж будет отклонен</string>
    <string name="cpsdk_error_3006_extra">Платеж будет отклонен. Попробуйте позже</string>
    <string name="cpsdk_error_3007_extra">Платеж будет отклонен. Попробуйте позже</string>
    <string name="cpsdk_error_3008_extra">Платеж будет отклонен</string>
    <string name="cpsdk_error_5001_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5005_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5006_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5012_extra">Воспользуйтесь другой картой или свяжитесь с банком, выпустившим карту</string>
    <string name="cpsdk_error_5013_extra">Проверьте корректность суммы</string>
    <string name="cpsdk_error_5030_extra">Повторите попытку позже</string>
    <string name="cpsdk_error_5031_extra">Воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5034_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5041_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5043_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5051_extra"></string>
    <string name="cpsdk_error_5054_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5057_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5065_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5082_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5091_extra">Повторите попытку позже или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5092_extra">Повторите попытку позже или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5096_extra">Повторите попытку позже</string>
    <string name="cpsdk_error_5204_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5206_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5207_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5300_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
</resources>